Skip ViT-L if wrong GPUs

--- a/Pixel_Art_Diffusion_v1_0.ipynb
+++ b/Pixel_Art_Diffusion_v1_0.ipynb
@@ -16,7 +16,7 @@
         "id": "TitleTop"
       },
       "source": [
-        "# Pixel Art Diffusion v1.001 by [KaliYuga](https://twitter.com/KaliYuga_ai)\n",
+        "# Pixel Art Diffusion v1.002 by [KaliYuga](https://twitter.com/KaliYuga_ai)\n",
         "\n",
         "Pixel Art Diffusion is a custom-trained unconditional diffusion model trained on an original (small) dataset of ~1500 256x256 pixel art landscapes using the [fine-tuning openai diffusion model](https://colab.research.google.com/drive/1Xfd5fm4OnhTd6IHPMGcoqw54uhGT3HdF) notebook by [Alex Spirin](https://twitter.com/devdef). I will expand this dataset over time. \n",
         "\n",
@@ -65,7 +65,8 @@
         "\n",
         "06.1.2022:\n",
         "- V1.0 Release\n",
-        "- V1.001 T4 and V100 fix by [Multimodal Ai Art](https://twitter.com/multimodalart)\n",
+        "- V1.001 T4 and V100 fix for some cases by [Multimodal Ai Art](https://twitter.com/multimodalart)\n",
+        "- V1.002 T4 and V100 skip ViT-L/14 for compatibility by [Multimodal Ai Art](https://twitter.com/multimodalart)\n",
         "\n",
         "-----\n",
         "If you enjoy the notebook, feel free to \n",
@@ -1789,8 +1790,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ModelSettings",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "ModelSettings"
       },
       "source": [
         "#@markdown ####**Models Settings:**\n",
@@ -1802,17 +1803,31 @@
         "#@markdown #####**CLIP settings:**\n",
         "ViTB32 = True #@param{type:\"boolean\"}\n",
         "ViTB16 = True #@param{type:\"boolean\"}\n",
-        "ViTL14 = True #@param{type:\"boolean\"}\n",
+        "#@markdown `ViT-L` may break things for certain Colab GPUs. We will be automatically disable it if you got an incompatible GPU\n",
+        "ViTL14 = False #@param{type:\"boolean\"}\n",
         "ViTL14_336 = False #@param{type:\"boolean\"}\n",
         "RN101 = False #@param{type:\"boolean\"}\n",
         "RN50 = True #@param{type:\"boolean\"}\n",
         "RN50x4 = True #@param{type:\"boolean\"}\n",
         "RN50x16 = False #@param{type:\"boolean\"}\n",
         "RN50x64 = False #@param{type:\"boolean\"}\n",
+        "nvidiasmi_output = subprocess.run(['nvidia-smi'], stdout=subprocess.PIPE).stdout.decode('utf-8')\n",
+        "cards_requiring_downgrade = [\"Tesla T4\", \"V100\"]\n",
         "\n",
         "#@markdown If you're having issues with model downloads, check this to compare SHA's:\n",
         "check_model_SHA = False #@param{type:\"boolean\"}\n",
         "use_checkpoint = True #@param {type: 'boolean'}\n",
+        "\n",
+        "#@markdown If know what you are doing and want to force ViT-L no matter which GPU you  got, check this box (things may break)\n",
+        "force_vitL = False #@param{type:\"boolean\"}\n",
+        "\n",
+        "if any(cardstr in nvidiasmi_output for cardstr in cards_requiring_downgrade) and ViTL14 and not force_vitL:\n",
+        "  print(\"You got an incompatible GPU, skipping ViT-L/14\")\n",
+        "  ViTL14 = False\n",
+        "if any(cardstr in nvidiasmi_output for cardstr in cards_requiring_downgrade) and ViTL14_336 and not force_vitL:\n",
+        "  print(\"You got an incompatible GPU, skipping ViT-L/14@336px\")\n",
+        "  ViTL14_336 = False\n",
+        "\n",
         "model_pixel_art_diffusion_hard_256_SHA = 'be4a9de943ec06eef32c65a1008c60ad017723a4d35dc13169c66bb322234161'\n",
         "model_pixel_art_diffusion_soft_256_SHA = 'd321590e46b679bf6def1f1914b47c89e762c76f19ab3e3392c8ca07c791039c'\n",
         "model_secondary_SHA = '983e3de6f95c88c81b2ca7ebb2c217933be1973b1ff058776b970f901584613a'\n",
