--- a/Pixel_Art_Diffusion_v1_0.ipynb
+++ b/Pixel_Art_Diffusion_v1_0.ipynb
@@ -1803,7 +1803,7 @@
         "#@markdown #####**CLIP settings:**\n",
         "ViTB32 = True #@param{type:\"boolean\"}\n",
         "ViTB16 = True #@param{type:\"boolean\"}\n",
-        "#@markdown `ViT-L` may break things for certain Colab GPUs. We will be automatically disable it if you got an incompatible GPU\n",
+        "#@markdown `ViT-L` may break things for certain Colab GPUs. We will be automatically disabled it if you got an incompatible GPU\n",
         "ViTL14 = False #@param{type:\"boolean\"}\n",
         "ViTL14_336 = False #@param{type:\"boolean\"}\n",
         "RN101 = False #@param{type:\"boolean\"}\n",
